@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 12
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam rectangle {
  BorderColor #344054
  FontColor #101828
}
skinparam package {
  BorderColor #667085
  FontColor #101828
  BackgroundColor #F9FAFB
}
skinparam class {
  BorderColor #344054
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure - Close out and archive
class Listing {
  +Guid Id
  +ListingKind Kind
  +ListingStatus Status
  +DateTimeOffset? ClosedOutAt
  +CloseOut(asOf: DateTimeOffset): void
}
enum ListingStatus {
  Active
  Archived
  Sold
  GivenAway
  Completed
}
class CloseOutListingCommand {
  +Guid ListingId
}
class CloseOutListingCommandHandler {
  +Handle(command: CloseOutListingCommand): Task<CloseOutListingResult>
}
class DeleteListingCommand <<planned>> {
  +Guid ListingId
}
Listing --> ListingStatus : holds
CloseOutListingCommandHandler ..> CloseOutListingCommand : handles
CloseOutListingCommandHandler --> Listing : transitions
DeleteListingCommand ..> Listing : deletion target
@enduml
